search friend function unfinished

--- a/article.html
+++ b/article.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>article</title>
 </head>
 <body>
-    <div>
+    <div class="myProfile"></div>
+    <div style="margin-top: 50px">
+        <div>交友狀況</div>
+            <div class="friend"></div>
+    </div>
+    <div style="margin-top: 50px">
         <input class="articleTitle" placeholder="輸入標題..."/>
         <select class="articleTags">
             <option>表特</option>
@@ -20,7 +25,7 @@
     </div>
     <div class="showSubmit"></div>
 
-    <div>
+    <div style="margin-top: 50px">
         <div>按好友名單搜尋</div>
         <select class="articleSearch" onchange="match()"></select>
         <div>按貼文分類搜尋</div>
