--- a/article.html
+++ b/article.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div class="myProfile"></div>
+    <div>
+      <input type="text" class="addFriend" placeholder="請輸入信箱..." />
+      <button onclick="search()">加入好友</button>
+    </div>    
     <div style="margin-top: 50px">
         <div>交友狀況</div>
             <div class="friend"></div>
